# rsse

./: Cargo.toml  README.md  arch.dio  errors.md  log  proxy-test.sh  todo.md
examples/: gpt_sample.rs
src/: client.rs  connector.rs  event_handler.rs  http.rs  lib.rs  main.rs  request_builder.rs  response.rs  sse.rs  stream_reader.rs  subscriber.rs  url.rs
src/http/: body.rs  header.rs  request.rs  response.rs  status_line.rs  url.rs
src/sse/: client.rs  connection.dio  connector.rs  response.rs  server.rs  subscriber.rs
