[package]
name = "rsse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = "0.21.1"
webpki = "0.22.0"
webpki-roots = "0.23.0"
warp = "0.3.1"
