[package]
name = "rsse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.21.1"
webpki = "0.22.0"
webpki-roots = "0.23.0"
serde={version ="1",features = ["derive"]}
serde_json="1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24.0"
rustls-pemfile="1.0.0"
thiserror="1.0.0"
anyhow="1.0.0"
